Use small JDK 13